# storage-rs

./: Cargo.toml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/common/: Cargo.toml
crates/common/src/: config.rs  error.rs  lib.rs  time.rs
crates/store/: Cargo.toml
crates/store/src/: backup.rs  header.rs  lib.rs  meta.rs  version.rs
crates/watcher/: Cargo.toml
crates/watcher/src/: lib.rs  watcher.rs
crates/xstd/: Cargo.toml
crates/xstd/src/: assert.rs  bits.rs  cast.rs  collections.rs  display.rs  env.rs  fs.rs  graph.rs  hash.rs  hint.rs  id_gen.rs  iter.rs  lex.rs  lib.rs  now.rs  option.rs  panic.rs  path.rs  permutations.rs  result.rs  stats.rs  str.rs  test.rs  thread.rs  vec.rs
crates/xstd/src/collections/: hash.rs
