[package]
authors.workspace = true
description = "A command-line interface for user interaction."
edition.workspace = true
name = "storage-cli"
version = "0.1.0"

[dependencies]
clap = { version = "4.2.1", features = ["cargo", "derive", "unicode", "wrap_help"] }
miette = { version = "5.7.0", features = ["fancy"] }
storage-common = { path = "../common" }
thiserror = "1.0.40"
xstd = { path = "../xstd" }
