[package]
authors.workspace = true
edition.workspace = true
name = "storage-mon"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5.7"
miette = { version = "5.7.0", features = ["fancy"] }
notify = { version = "5.1.0", features = ["serde"] }
storage-common = { path = "../common" }
thiserror = "1.0.40"
xstd = { path = "../xstd" }

[dev-dependencies]
tempfile = "3.2.0"
