[package]
authors.workspace = true
edition.workspace = true
name = "xstd"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
either = "1.8.1"
once_cell = "1.17.1"
paste = "1.0.12"
pin-project = "1.0.12"

anyhow = { version = "1.0.66", optional = true }
ctor = { version = "0.1.26", optional = true }
tracing-subscriber = { version = "0.3.16", default-features = false, features = [
    "env-filter",
    "fmt",
    "json",
    "tracing-log",
], optional = true }

smallvec = { version = "1.10.0", optional = true }

bytes = { version = "1.3.0", optional = true }
chrono = { version = "0.4.23", default-features = false, features = [
    "std",
], optional = true }
walkdir = "2.3.3"
miette = { version = "5.7.0", features = ["fancy"] }
thiserror = "1.0.40"

[dev-dependencies]
anyhow = { version = "1.0.66" }
scopeguard = "1.1.0"
tokio = { version = "1.24.2", features = ["macros", "rt-multi-thread"] }

[features]
default = ["chrono"]
test = ["anyhow", "ctor", "tracing-subscriber"]
